--- a/public/css/footer.css
+++ b/public/css/footer.css
@@ -1,6 +1,6 @@
 @import url(https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,200,300,600,700,900);
 html {
-    background: #aaabb8;
+    background: #e5e5e9;
 }
 
 footer {
